Finished up category collapse functionality, fixed issues with "subpage" rootpages resetting the breadcrumbs, silenced some log spam.

--- a/CohtmlUI/BTKUI.less
+++ b/CohtmlUI/BTKUI.less
@@ -326,8 +326,8 @@
       background: url("images/Arrow Up.png");
       background-size: cover;
       background-repeat: no-repeat;
-      height: 100px;
-      width: 100px;
+      height: 90px;
+      width: 90px;
     }
 
     .icon-expand {
@@ -335,12 +335,12 @@
       background-size: cover;
       background-repeat: no-repeat;
       transform: rotate(180deg);
-      height: 100px;
-      width: 100px;
+      height: 90px;
+      width: 90px;
     }
 
     .rowBorder {
-      border-bottom-color: white;
+      border-bottom-color: @standard-text-color;
       border-bottom-width: 4px;
       border-bottom-style: solid;
     }
